# email_reader

./: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
app/: client.py  config.py  decorators.py  imap_search_criteria.py  main.py  models.py  parser.py  service.py
github/workflows/: build-stage.yaml
src/: cache.py  client.py  config.py  logging.py  main.py  models.py  parser.py  service.py
src/utils/: __init__.py  cache.py  decorators.py  imap_search_criteria.py  logging.py  parser.py
test/: test_decoders.py
